More scraping stuff

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Delemiters like "" ''
 - Noparenteses when function don't need it
-- Statement, action, etc.
+- Statement, data_type, Translator, action, condition, clause
+X iRvision
